k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insightdesk-worker
  namespace: insightdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insightdesk-worker
  template:
    metadata:
      labels:
        app: insightdesk-worker
    spec:
      containers:
        - name: worker
          image: aylinminayi/insightdesk-api:week2
          imagePullPolicy: Always
