k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: insightdesk-api
  namespace: insightdesk
spec:
  type: NodePort
  selector:
    app: insightdesk-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30832
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insightdesk-api
  namespace: insightdesk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insightdesk-api
  template:
    metadata:
      labels:
        app: insightdesk-api
    spec:
      containers:
        - name: api
          image: aylinminayi/insightdesk-api:week2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
